--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="jquery.js"></script>
     <style type="text/css">
     body {
-        background-color: rgb(248, 248, 248);
+        background-color:#68B1BF;
         font-family: Tahoma, Geneva, sans-serif;
     }
     #container {
