--- a/index.html
+++ b/index.html
@@ -179,11 +179,7 @@
 
     <script>
     var links = $("#linkHold"),
-
         init = false;
-
-
-
 
     document.getElementById("submit").addEventListener('click', function(event) {
         if (init == false) {
@@ -218,7 +214,7 @@
             }
             socket.on('hit', function(data) {
 
-                links.prepend("<div class='ref fade'>" + data + "</div><a class='view btn2 fade' href='" + data + "' target='_blank'>view page</a><a class = 'download btn3 fade' href='http://localhost:3000/" + data + "'>download page</a>");
+                links.prepend("<div class='ref fade'>" + data + "</div><a class='view btn2 fade' href='" + data + "' target='_blank'>view page</a><a class = 'download btn3 fade' name ='" + data + "'>download page</a>");
                 $('.fade').fadeTo("fast", 1);
 
 
@@ -234,7 +230,23 @@
         }
 
     });
+
+    $('.download').on('click', request_page(e))
+
+    function request_page(e) {
+        if (init) {
+        socket.emit('download', e.target.getAttribute("name"));
+        } else {
+            socket = io.connect('//localhost:1234', {
+                'force new connection': true
+            });
+            socket.emit('download', e.target.getAttribute("name"));
+        }
+    }
     </script>
+
+
+
 </body>
 
 </html>
